# blog

./: 404.html  CHANGELOG.md  CNAME  Makefile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: blog.yml
2025/03/29/self-contained-python-scripts-with-uv/: index.html
2025/04/06/bootstrapping-python-projects-with-copier/: index.html
2025/05/13/introducing-typerdrive-boost-your-command-line-workflows-to-lightspeed/: index.html
2025/05/13/introducing-typerdrive-develop-api-connected-typer-apps-at-lightspeed/: index.html
2025/10/26/makefile-magic/: index.html
2025/11/25/uefi-arch-throwback-2012/: index.html
archive/2025/: index.html
category/dev/: index.html
category/dev-tools/: index.html
docs/: LICENSE.md  mkdocs.yaml
docs/overrides/partials/: comments.html
docs/source/: .authors.yaml  index.md
docs/source/posts/: 2025-03-29--self-contained-python-scripts-with-uv.md  2025-04-06--bootstrapping-python-projects-with-copier.md  2025-05-13--introducing-typerdrive-boost-your-command-line-workflows-to-lightspeed.md  2025-05-13--introducing-typerdrive-develop-api-connected-typer-apps-at-lightspeed.md  2025-10-26--makefile-magic.md  2025-11-25--uefi-arch-throwback-2012.md
search/: search_index.json
src/blog/: __init__.py  cache.py  config.py  exceptions.py  main.py  schemas.py  utilities.py  write.py
