[project]
name = "blog"
version = "0.1.0"
description = "the.dusktreader blog"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = [
    "LICENSE.md",
    "docs/LICENSE.md",
]
requires-python = "~=3.13"
dependencies = [
    "mkdocs-material>=9.6.9",
    "mkdocs-rss-plugin>=1.17.1",
    "mkdocstrings[python]>=0.29.0",
]

[project.urls]
homepage = "https://blog.dusktreader.dev"
source = "https://github.com/dusktreader/blog"
changelog = "https://github.com/dusktreader/blog/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
]
